2015-01-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peep.c:
	  Fix handling of nop in z80MightRead, patch #259 by alvin.

2015-01-03 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/linksrc/lkarea.c:
	  Fix handling of NOLOAD for STM8 in linker, patch by Peter Dons Tychsen.
	* src/SDCCralloc.hpp:
	  Fix compare operator for register assignments.

2016-01-02 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/sdbinutils/binutils/arparse.c
	* support/sdbinutils/binutils/arparse.h
	  Delete intermediate files.

2016-01-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* all.vcxproj,
	* config.vcxproj,
	* sdas/as6808/as_hc08.vcxproj,
	* sdas/as8051/asx8051.vcxproj,
	* sdas/as8xcxxx/sdas390.vcxproj,
	* sdas/asgb/asgb.vcxproj,
	* sdas/linksrc/aslink.vcxproj,
	* src/avr/avr.vcxproj,
	* src/ds390/ds390.vcxproj,
	* src/hc08/hc08.vcxproj,
	* src/mcs51/mcs51.vcxproj,
	* src/pic14/pic14.vcxproj,
	* src/pic16/pic16.vcxproj,
	* src/sdcc.vcxproj,
	* src/xa51/xa51.vcxproj,
	* src/z80/z80.vcxproj,
	* src/z80/z80a.vcxproj,
	* support/cpp/sdcpp.vcxproj,
	* support/librarian/librarian.vcxproj,
	* support/makebin/makebin.vcxproj,
	* support/packihx/packihx.vcxproj: applied patch 252 by Peter Dons Tychsen
	  to remove UpgradeFromVC60.props

2015-12-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCdwarf2.c:
	  Fix memory bug in DWARF output, patch by Peter Dons Tychsen.
	* sdas/asxxsrc/asdbg.c:
	  Fix 0 pointer access when specifying -y or -j without -o.

2015-12-30 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCsymt.c
	  Make comparePtrType() less strict.
	* support/regression/tests/bug-2271.c
	  Improve test case.

2015-12-28 Ben Shi <powerstudio1st AT 163 DOT com>

	* doc/sdccman.lyx
	  Suggest msys2 along with msys while building wih MSVC.
	* sdas/asxxsrc/assym.c
	  Apply patch #253.

2015-12-26 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/stm8/gen.c
	  Add absent call to dwWriteFunction() while --debug is specified.
  